[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arch>=7.2.0",
    "numpy==1.24.0",
    "pandas==2.0.0",
    "plotly==5.13.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.42.1",
    "textblob>=0.19.0",
    "trafilatura>=2.0.0",
    "twilio>=9.4.5",
    "yfinance>=0.2.54",
]
